feat: clean html

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                                 <div class="container">
 
                                     <h3>La forme du contrat</h3>
-                                    <p class="subtitle">(une convention de partenariat d’expérimentation
-                                        signée entre La 27e Région et chaque collectivité partenaire) et son contenu
+                                    <p class="subtitle">(une convention de partenariat d’expérimentation signée entre La
+                                        27e Région et chaque collectivité partenaire) et son contenu
                                     </p>
 
                                 </div>
@@ -185,8 +185,8 @@
                                 <div class="container">
 
                                     <h3>Le co-financement du programme</h3>
-                                    <p class="subtitle">par les collectivités engagées dans La
-                                        Transfo et Bloomberg Philanthropies
+                                    <p class="subtitle">par les collectivités engagées dans La Transfo et Bloomberg
+                                        Philanthropies
                                     </p>
 
                                 </div>
@@ -203,8 +203,7 @@
                                 <div class="container">
 
                                     <h3>La dimension inter-collectivités du programme </h3>
-                                    <p class="subtitle">et sa
-                                        documentation ouverte (blog, expos publiques…)
+                                    <p class="subtitle">et sa documentation ouverte (blog, expos publiques…)
                                     </p>
 
                                 </div>
@@ -217,8 +216,7 @@
                                 <div class="container">
 
                                     <h3>La coordination bicéphale</h3>
-                                    <p class="subtitle">entre la 27e
-                                        Région et un agent “pilote” dans la collectivité
+                                    <p class="subtitle">entre la 27e Région et un agent “pilote” dans la collectivité
                                     </p>
 
                                 </div>
@@ -235,10 +233,9 @@
                                 <div class="container">
 
                                     <h3>L’adhésion des collectivités à La 27e Région</h3>
-                                    <p class="subtitle">qui renforce la dimension
-                                        partenariale (participation à la gouvernance et aux orientations de La 27e
-                                        Région) et l’intégration à une communauté de professionnels engagés dans des
-                                        démarches similaires
+                                    <p class="subtitle">qui renforce la dimension partenariale (participation à la
+                                        gouvernance et aux orientations de La 27e Région) et l’intégration à une
+                                        communauté de professionnels engagés dans des démarches similaires
                                     </p>
 
                                 </div>
@@ -381,8 +378,6 @@
 
                         <h2>Temoignages</h2>
                         <div>
-                            <!-- <p>04 MAI 2020</p>
-                            <p>( No Model ) N°. 002.006</p> -->
                             <p>STÉPHANE VINCENT</p>
                             <p>( délégué général )</p>
                         </div>
@@ -397,8 +392,7 @@
 
                         <figure>
                             <figcaption>Quelles sont les principaux éléments qui ont permis d’établir le cadre
-                                expérimental<br>
-                                et partenarialde La Transfo selon toi?
+                                expérimental<br> et partenarialde La Transfo selon toi?
                             </figcaption>
                             <audio controls="controls" preload="none">
                                 <source src="assets/audio/ce/1-experimental.m4a">
@@ -1108,7 +1102,8 @@
                         </p>
 
                         <h3>Du point de l’organisation du travail et des “résidents” (les professionnels mandatés
-                            pour animer la démarche)</h3>
+                            pour animer la démarche)
+                        </h3>
                         <p>La durée et le rythme ont permis de comprendre l’organisation, la culture, la géopolitique
                             interne et les défis de l’organisation. Le rythme soutenu a cependant été une contrainte
                             forte : difficulté à prendre du recul, à s’organiser d’une session à l’autre, notamment
@@ -1178,8 +1173,7 @@
                         </p>
                         <p>
                             <a href="assets/outils/p/4-deroule-metz-2.pdf" download="deroule_session_metz_2"
-                                target="_blank"> Exemple de déroulé de deux sessions 2/2
-                                (Metz)
+                                target="_blank"> Exemple de déroulé de deux sessions 2/2 (Metz)
                             </a>
                         </p>
                     </div>
@@ -1389,10 +1383,8 @@
                                     </p>
                                     <p>À Paris, sous l’impulsion d’une des “résidentes” animatrices de la démarche ,
                                         urbaniste et coach, cette dimension a pris une part importante, avec des
-                                        temps
-                                        dédiés, parallèles aux activités de formation-action sur les cas pratiques
-                                        et de
-                                        co-construction du labo.
+                                        temps dédiés, parallèles aux activités de formation-action sur les cas pratiques
+                                        et de co-construction du labo.
                                     </p>
 
                                 </div>
@@ -1411,9 +1403,8 @@
                                     <p class="subtitle">La dimension formation</p>
                                     <p>À Mulhouse et en Occitanie, la dimension pédagogique a été particulièrement
                                         outillée, avec des exercices inter-sessions et “devoirs de vacances”
-                                        (Mulhouse)
-                                        et des modules d’approfondissement de certains apprentissages en plus petits
-                                        groupes, les Transfos + (Occitanie)
+                                        (Mulhouse) et des modules d’approfondissement de certains apprentissages en plus
+                                        petits groupes, les Transfos + (Occitanie)
                                     </p>
 
                                 </div>
@@ -1542,8 +1533,6 @@
 
                         <h2>Temoignages</h2>
                         <div>
-                            <!-- <p>04 MAI 2020</p>
-                            <p>( No Model ) N°. 002.006</p> -->
                             <p>SÉBASTIEN HOUSSIN</p>
                             <p>( coordinateur du labo )</p>
                         </div>
@@ -1741,12 +1730,9 @@
 
                                     <h3>Metz, les bureaux volants</h3>
                                     <p>Comment améliorer l’usages de la flotte de vélo de la métropole? C’est le
-                                        sujet
-                                        du 1er cas pratique de la Transfo Metz. Sur la base d’un travail d’enquête,
-                                        les
-                                        ambassadeurs ont fait évoluer le cas pratique vers les questions de
-                                        mobilités
-                                        plus respectueuses de l’environnement et du bien-être au travail.
+                                        sujet du 1er cas pratique de la Transfo Metz. Sur la base d’un travail
+                                        d’enquête, les ambassadeurs ont fait évoluer le cas pratique vers les questions
+                                        de mobilités plus respectueuses de l’environnement et du bien-être au travail.
                                     </p>
                                     <p class="strong">Ce cas pratique est un bon exemple d’un cas en autosaisine,
                                         portant sur un sujet interne, et qui forme les agents sur l’ensemble d’un
@@ -1772,14 +1758,11 @@
 
                                     <h3>Lille, le Brico Concierge</h3>
                                     <p>Le 1er cas de la Transfo lille a porté sur Amelio, un dispositif
-                                        d’accompagnement
-                                        et de financement des travaux de rénovation énergétique porté par la
-                                        Métropole
-                                        européenne de Lille. Objectif du cas pratique : améliorer le recours à ce
-                                        dispositif aujourd’hui sous-utilisé. Ce cas a donné lieu à deux
-                                        expérimentation
-                                        portant sur un dispositif de médiation (carnet de santé du logement) et un
-                                        service de proximité (le brico-concierge).
+                                        d’accompagnement et de financement des travaux de rénovation énergétique porté
+                                        par la Métropole européenne de Lille. Objectif du cas pratique : améliorer le
+                                        recours à ce dispositif aujourd’hui sous-utilisé. Ce cas a donné lieu à deux
+                                        expérimentation portant sur un dispositif de médiation (carnet de santé du
+                                        logement) et un service de proximité (le brico-concierge).
                                     </p>
                                     <p class="strong">Ce cas pratique est un bon exemple d’un cas en autosaisine,
                                         portant sur un sujet interne, et qui forme les agents sur l’ensemble d’un
@@ -1787,8 +1770,7 @@
                                     </p>
                                     <p class="links">
                                         <a href="assets/post-it/cc/lille-amelio.pdf" target="_blank">Voir l’analyse
-                                            du
-                                            cas en détail</a>
+                                            du cas en détail</a>
                                     </p>
 
                                 </div>
@@ -1835,19 +1817,14 @@
 
                                     <h3>Strasbourg, les inscriptions scolaires</h3>
                                     <p>2e cas pratique de la Transfo Strasbourg, ce cas avait pour but d’accompagner
-                                        la
-                                        Direction de l’Enfance et de l’Éducation dans le renouvellement de son
-                                        logiciel
-                                        informatique de gestion des inscriptions scolaires et périscolaires. La
-                                        mission
-                                        a consisté à nourrir un cahier des charges par une exploration des besoins
-                                        et
-                                        une meilleure compréhension des usages.
+                                        la Direction de l’Enfance et de l’Éducation dans le renouvellement de son
+                                        logiciel informatique de gestion des inscriptions scolaires et périscolaires. La
+                                        mission a consisté à nourrir un cahier des charges par une exploration des
+                                        besoins et une meilleure compréhension des usages.
                                     </p>
                                     <p class="strong">Ce cas pratique est un bon exemple de cas portant sur un
                                         dispositif numérique, avec un apport très opérationnel (nourrir un cahier
-                                        des
-                                        charges) directement utile au service commanditaire.
+                                        des charges) directement utile au service commanditaire.
                                     </p>
                                     <p class="links">
                                         <a href="assets/post-it/cc/strasbourg-inscriptions.pdf" target="_blank">Voir
@@ -1881,8 +1858,7 @@
                                     </p>
                                     <p class="links">
                                         <a href="assets/post-it/cc/paris-arbres.pdf" target="_blank">Voir l’analyse
-                                            du
-                                            cas en détail</a>
+                                            du cas en détail</a>
                                     </p>
 
                                 </div>
@@ -1900,17 +1876,14 @@
 
                                     <h3>Dunkerque le Bois du fort</h3>
                                     <p>Le dernier cas pratique de la Transfo Dunkerque a porté sur la transformation
-                                        des
-                                        usages et des modes de gestion des espaces verts, en partant d’un espace
-                                        précis,
-                                        le Bois des Forts. Objectif : identifier des marges d’amélioration dans la
-                                        gestion de cet espace et imaginer une gestion plus partagés entre agents
+                                        des usages et des modes de gestion des espaces verts, en partant d’un espace
+                                        précis, le Bois des Forts. Objectif : identifier des marges d’amélioration dans
+                                        la gestion de cet espace et imaginer une gestion plus partagés entre agents
                                         techniques, services administratifs et habitants-usagers.
                                     </p>
                                     <p class="strong">Conduit en quasi autonomie, ce cas pratique est un bon exemple
                                         de cas de “tuilage” entre la fin de la Transfo, et le début du labo
-                                        fonctionnant
-                                        en autonomie.
+                                        fonctionnant en autonomie.
                                     </p>
                                     <p class="links">
                                         <a href="assets/post-it/cc/dunkerque-bois-fort.pdf" target="_blank">Voir
@@ -1975,7 +1948,7 @@
                             <ul>
                                 <li><strong>Partager le caractère expérimental du cas pratique avec les porteurs de cas
                                     </strong><br>
-                                    , qui est différent de celui d’une mission de conseil interne. Prendre un temps pour
+                                    qui est différent de celui d’une mission de conseil interne. Prendre un temps pour
                                     expliciter le cadre expérimental de La Transfo avec le “porteur du cas” en posant
                                     clairement les finalités pédagogiques, les contraintes de calendrier, la non
                                     obligation de résultats, etc. s’est souvent avéré salutaire pour éviter les
@@ -2088,8 +2061,6 @@
 
                         <h2>Temoignages</h2>
                         <div>
-                            <!-- <p>04 MAI 2020</p>
-                            <p>( No Model ) N°. 002.006</p> -->
                             <p>ANNA HIHN</p>
                             <p>CELINE TERGAU & YOLAINE SOARES</p>
                         </div>
@@ -2304,8 +2275,7 @@
 
                                     <h3>En Région Grand Est</h3>
                                     <p class="subtitle">Les Transfos de Metz et Strasbourg ont commencé à bâtir,
-                                        avec
-                                        la cellule innovation de la Région et le labo Mulhousien, un réseau
+                                        avec la cellule innovation de la Région et le labo Mulhousien, un réseau
                                         inter-territorial de labos publics : veille partagée, partage de contacts de
                                         prestataires, échanges sur les projets, etc.
                                     </p>
@@ -2324,13 +2294,11 @@
 
                                     <h3>A Dunkerque</h3>
                                     <p class="subtitle">Le futur labo figurait dans le nouveau projet
-                                        d’administration
-                                        lancé avant le démarrage de La Transfo, au côté d’autres démarches
-                                        d’innovation
+                                        d’administration lancé avant le démarrage de La Transfo, au côté d’autres
+                                        démarches d’innovation
                                     </p>
                                     <p> (centre de ressources participation citoyenne, dispositif de remontée
-                                        d’idées
-                                        d’agents, ateliers collaboratifs…), et la question de l’articulation de
+                                        d’idées d’agents, ateliers collaboratifs…), et la question de l’articulation de
                                         l’ensemble s’est posée à plusieurs reprises.
                                     </p>
 
@@ -2462,8 +2430,6 @@
 
                         <h2>Temoignages</h2>
                         <div>
-                            <!-- <p>04 MAI 2020</p>
-                            <p>( No Model ) N°. 002.006</p> -->
                             <p>SILVÈRE MERCIER</p>
                             <p>(coordinateur, chargé de mission)</p>
                         </div>
@@ -2845,8 +2811,6 @@
 
                         <h2>Temoignages</h2>
                         <div>
-                            <!-- <p>04 MAI 2020</p>
-                            <p>( No Model ) N°. 002.006</p> -->
                             <p>PIERRE ROGER</p>
                             <p>( coordinateur )</p>
                         </div>
