feat: links-box illustrations

--- a/index.html
+++ b/index.html
@@ -343,13 +343,8 @@
                     </div>
 
                     <div class="links-box"
-                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
+                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
 
-                        <!-- <p>
-                            <a href="assets/outils/ce/presentation-transfo.pdf" download="Presentation_de_la_Transfo"
-                                target="_blank">Présentation de la Transfo
-                            </a>
-                        </p> -->
                         <p>
                             <a href="assets/outils/ce/vademecum-transfo.pdf" download="Vademecum_de_la_Transfo"
                                 target="_blank">Vademecum de la Transfo
@@ -388,7 +383,7 @@
                     </p>
 
                     <div class="links-box audio"
-                        style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
+                        style="background-image: url(images/ear-1.png), url(images/right-ear.png);">
 
                         <figure>
                             <figcaption>Quelles sont les principaux éléments qui ont permis d’établir le cadre
@@ -771,7 +766,7 @@
                     </div>
 
                     <div class=" links-box"
-                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
+                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
 
                         <p>
                             <a href="assets/outils/mp/1-cartographie-competences.pdf"
@@ -829,7 +824,7 @@
                     <!-- AUDIO -->
 
                     <div class="links-box  audio"
-                        style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
+                        style="background-image: url(images/ear-1.png), url(images/right-ear.png);">
 
                         <figure>
                             <figcaption>Quels sont selon vous les apports principaux de vos disciplines respectives
@@ -1155,7 +1150,7 @@
                     </div>
 
                     <div class=" links-box"
-                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
+                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
                         <p>
                             <a href="assets/outils/p/1-processus-global.pdf" download="processus_global_transfo"
                                 target="_blank"> Processus global de la Transfo
@@ -1494,7 +1489,7 @@
                     </div>
 
                     <div class=" links-box"
-                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
+                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
                         <p>
                             <a href="assets/outils/a/1-recrutement.pdf" download="recrutement_embassadeurs"
                                 target="_blank">Comment recruter des ambassadeurs?
@@ -1546,7 +1541,7 @@
                     <!-- AUDIO -->
 
                     <div class="links-box audio"
-                        style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
+                        style="background-image: url(images/ear-1.png), url(images/right-ear.png);">
 
                         <figure>
                             <figcaption>Qu’est-ce que la présence d’agents a apporté à la démarche?</figcaption>
@@ -1587,7 +1582,7 @@
                     <!-- VIDEO -->
 
                     <div class=" links-box video"
-                        style="background-image: url(images/left-eye.png), url(images/right-eye.png);">
+                        style="background-image: url(images/eye-1.png), url(images/right-eye.png);">
 
                         <figure>
                             <figcaption>“Témoignage d’ambassadeurs” (Strasbourg)</figcaption>
@@ -2024,7 +2019,7 @@
                     </div>
 
                     <div class=" links-box"
-                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
+                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
                         <p>
                             <a href="assets/outils/cc/1-cas-pratique-occitanie.pdf" download="deroule_cas_pratique"
                                 target="_blank">Exemple d’un déroulé de cas pratique (Occitanie)
@@ -2076,7 +2071,7 @@
                     <!-- VDEO -->
 
                     <div class="links-box video"
-                        style="background-image: url(images/left-eye.png), url(images/right-eye.png);">
+                        style="background-image: url(images/eye-1.png), url(images/right-eye.png);">
 
                         <figure>
                             <figcaption>Qu'est ce qui vous a motivé à prendre contact avec La Transfo?</figcaption>
@@ -2401,7 +2396,7 @@
                     </div>
 
                     <div class=" links-box"
-                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
+                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
                         <p>
                             <a href="assets/outils/e/1-tactiques.pdf" download="construction_ecosysteme_innovation"
                                 target="_blank">Construire un écosystème d’innovation,<br>
@@ -2443,7 +2438,7 @@
                     <!-- AUDIO -->
 
                     <div class="links-box audio"
-                        style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
+                        style="background-image: url(images/ear-1.png), url(images/right-ear.png);">
 
                         <figure>
                             <figcaption>L'écosystème d'innovation, de quels acteurs parle-t-on au juste?
@@ -2760,7 +2755,7 @@
                     </div>
 
                     <div class=" links-box"
-                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
+                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
                         <p>
                             <a href="assets/outils/fl/1-positionnement.pdf" download="" target="_blank">Quels
                                 positionnements pour le labo?
@@ -2822,7 +2817,7 @@
                     <!-- AUDIO -->
 
                     <div class="links-box audio"
-                        style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
+                        style="background-image: url(images/ear-1.png), url(images/right-ear.png);">
 
                         <figure>
                             <figcaption>Comment s'est passée la transition entre transfo et labo?</figcaption>
