feat: add contact

--- a/about.html
+++ b/about.html
@@ -58,6 +58,8 @@
             </div>
         </div>
 
+        <!-- CONTENT -->
+
         <div class="content">
             <p class="sheet">( À propos )</p>
 
@@ -237,7 +239,7 @@
                         La Transfo au sein d’une collectivité : ce sont les “résidents”.
                     </p>
                     <div class=" links-box"
-                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
+                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
                         <p>
                             <a href="index.html" target="_blank">Comment impliquer les agents publics?</a>
                         </p>
@@ -256,7 +258,7 @@
                         menés par l’équipe (animateur de la démarche et agents ambassadeurs) pendant les sessions.
                     </p>
                     <div class="links-box"
-                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
+                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
                         <p>
                             <a href="index.html" target="_blank">Comment bien rythmer la démarche?</a>
                         </p>
