--- a/contact.html
+++ b/contact.html
@@ -60,11 +60,40 @@
             </div>
         </div>
 
+        <!-- CONTENT -->
+
         <div class="content">
             <p class="sheet">( Contact )</p>
-            <div class="container">
-
-            </div>
+            <article>
+                <div class="intro container">
+                    <p>
+                        La transfo est un programme de
+                        <a href="http://www.la27eregion.fr" target="_blank">la 27e Région</a>.
+                    </p>
+                    <p>
+                        Pour en savoir plus sur la Transfo et les autres projets que nous développons, contactez nous
+                        par
+                        mail à <a class="contact" href="mailto:infos@la27eregion.fr">infos@la27eregion.fr</a>
+                        ou par telephone au <a class="contact" href="tel:+33183629827">01 83 62 98 27</a>.
+                    </p>
+                </div>
+                <div class="container">
+                    <div class="links-box">
+                        <ul>
+                            <li> <a class="contact" href="https://twitter.com/La27eregion" target="_blank">
+                                    <img src="images/contact/transfo-twitter.png" alt="logo twitter">
+                                    <p>Twitter</p>
+                                </a>
+                            </li>
+                            <li> <a class="contact" href="https://twitter.com/La27eregion" target="_blank">
+                                    <img src="images/contact/transfo-linkedin.png" alt="logo linkedin">
+                                    <p>Linkedin</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </article>
         </div>
 
     </main>
