feat: img cousins

--- a/cousins.html
+++ b/cousins.html
@@ -118,7 +118,7 @@
                             mai 2019
                         </p>
                         <div class="links-box"
-                            style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
+                            style="background-image: url(images/ear-1.png), url(images/right-ear.png);">
 
                             <figure>
                                 <figcaption>Peux-tu rappeler la genèse et les objectifs de l’appel à projet PIA<br>
@@ -226,7 +226,7 @@
                         <p class="intro"><strong>Nicolas Taillandier</strong>, consultant, Bureau 02 </p>
 
                         <div class="links-box"
-                            style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
+                            style="background-image: url(images/ear-1.png), url(images/right-ear.png);">
 
                             <figure>
                                 <figcaption>Peux-tu rappeler le contexte et les objectifs de la mission?</figcaption>
