feat: hover lien cliquables

--- a/about.html
+++ b/about.html
@@ -240,8 +240,8 @@
                     </p>
                     <div class=" links-box"
                         style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
-                        <p id="involve">Comment impliquer les agents publics?</p>
-                        <p id="pluri">Comment intégrer des disciplines diverses?</p>
+                        <p id="involve" class="goToSection">Comment impliquer les agents publics?</p>
+                        <p id="multi" class="goToSection">Comment intégrer des disciplines diverses?</p>
                     </div>
                 </article>
 
@@ -255,8 +255,8 @@
                     </p>
                     <div class="links-box"
                         style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
-                        <p id="rhythm">Comment bien rythmer la démarche?</p>
-                        <p id="concrete">Comment travailler à partir de cas?</p>
+                        <p id="rhythm" class="goToSection">Comment bien rythmer la démarche?</p>
+                        <p id="concrete" class="goToSection">Comment travailler à partir de cas?</p>
                     </div>
                 </article>
 
@@ -264,7 +264,7 @@
         </div>
     </main>
 
-    <script src="about-script.js"></script>
+    <script src="js/about-script.js"></script>
 </body>
 
 </html>
