--- a/contact.html
+++ b/contact.html
@@ -80,14 +80,14 @@
                 <div class="container">
                     <div class="links-box">
                         <ul>
-                            <li> <a class="contact" href="https://twitter.com/La27eregion" target="_blank">
+                            <li> <a href="https://twitter.com/La27eregion" target="_blank">
                                     <img src="images/contact/transfo-twitter.png" alt="logo twitter">
-                                    <p>Twitter</p>
+                                    <br>Twitter
                                 </a>
                             </li>
-                            <li> <a class="contact" href="https://twitter.com/La27eregion" target="_blank">
+                            <li> <a href="https://twitter.com/La27eregion" target="_blank">
                                     <img src="images/contact/transfo-linkedin.png" alt="logo linkedin">
-                                    <p>Linkedin</p>
+                                    <br>Linkedin
                                 </a>
                             </li>
                         </ul>
