feat: add "code source" nav-link

--- a/about.html
+++ b/about.html
@@ -25,8 +25,11 @@
             </div>
 
             <ul class="nav_links">
+                <li class="link-home">
+                    <a class="hover_orange" href="index.html">Code Source</a>
+                </li>
                 <li>
-                    <a class="orange" href="about.html">À propos</a>
+                    <a class="orange hover_orange" href="about.html">À propos</a>
                 </li>
                 <li>
                     <a class="hover_orange" href="contact.html">Contact</a>
