--- a/cousins.html
+++ b/cousins.html
@@ -25,6 +25,9 @@
 
             </div>
             <ul class="nav_links">
+                <li class="link-home">
+                    <a class="hover_orange" href="index.html">Code Source</a>
+                </li>
                 <li>
                     <a class="hover_orange" href="about.html">À propos</a>
                 </li>
@@ -32,7 +35,7 @@
                     <a class="hover_orange" href="contact.html">Contact</a>
                 </li>
                 <li>
-                    <a class="orange" href="cousins.html">Nos cousins</a>
+                    <a class="orange hover_orange" href="cousins.html">Nos cousins</a>
                 </li>
             </ul>
 
