--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             </div>
 
             <ul class="nav_links">
+                <li class="link-home">
+                    <a class="orange hover_orange" href="index.html">Code Source</a>
+                </li>
                 <li>
                     <a class="hover_orange" href="about.html">À propos</a>
                 </li>
