--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,14 @@
 
             </div>
             <ul class="nav_links">
+                <li class="link-home">
+                    <a class="hover_orange" href="index.html">Code Source</a>
+                </li>
                 <li>
                     <a class="hover_orange" href="about.html">À propos</a>
                 </li>
                 <li>
-                    <a class="orange" href="contact.html">Contact</a>
+                    <a class="orange hover_orange" href="contact.html">Contact</a>
                 </li>
                 <li>
                     <a class="hover_orange" href="cousins.html">Nos cousins</a>
